Removing stupidity.