@@ -1,7 +1,5 @@
 #!/bin/sh
 
-#Docker Version
-
 GITHUB_OWNER1="Pugmatt"
 GITHUB_REPO1="BedrockConnect"
 GITHUB_OWNER2="DownThePark"
@@ -23,7 +21,7 @@ JAR_URL_EX=$(curl -s $API_URL_EX | jq -r '.assets[] | select(.name | endswith(".
 #Pull latest Bedrock Connect and place jar in minecraft folder
 if [[ $JAR_URL_BC == http* ]]; then
   # Use wget or curl to download the .jar file
-  cd $HOME/minecraft-server
+  cd /home/serveruser/minecraft-server
   echo "Downloading $JAR_URL_BC..."
   curl -L $JAR_URL_BC -o bedrock-connect.jar
   echo "Download completed: bedrock-connect.jar"
@@ -32,7 +30,7 @@ else
 fi
 
 #Geyser Spigot download
-cd $HOME/minecraft-server/plugins
+cd /home/serveruser/minecraft-server/plugins
 echo "Downloading Geyser Spigot..."
 curl -L https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest/downloads/spigot -o geyser-spigot.jar
 echo "Download completed: geyser-spigot.jar"
@@ -40,7 +38,7 @@ echo "Download completed: geyser-spigot.jar"
 #Pull latest SetHome Plugin
 if [[ $JAR_URL_SH == http* ]]; then
   # Use wget or curl to download the .jar file
-  cd $HOME/minecraft-server/plugins
+  cd /home/serveruser/minecraft-server/plugins
   echo "Downloading $JAR_URL_SH..."
   curl -L $JAR_URL_SH -o set-home.jar
   echo "Download completed: set-home.jar"
@@ -51,7 +49,7 @@ fi
 #Pull latest Essentials Plugin
 if [[ $JAR_URL_EX == http* ]]; then
   # Use wget or curl to download the .jar file
-  cd $HOME/minecraft-server/plugins
+  cd /home/serveruser/minecraft-server/plugins
   echo "Downloading $JAR_URL_EX..."
   curl -L $JAR_URL_EX -o essentials-x.jar
   echo "Download completed: essentials-x.jar"
@@ -61,17 +59,17 @@ fi
 
 #Pull latest spigot from Jenkins
 echo "Downloading Latest Spigot Server..."
-cd $HOME/minecraft-server
+cd /home/serveruser/minecraft-server
 curl -L https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar -o BuildTools.jar
 echo "Download completed: BuildTools.jar"
 
 #Build spigot
-cd $HOME/minecraft-server
+cd /home/serveruser/minecraft-server
 echo "Building/configuring spigot, this process will take a few minutes to complete"
-java -jar -Xmx2G -Xms2G -XX:+UseZGC BuildTools.jar
-mv spigot-*.jar $HOME/minecraft-server/spigot.jar
+/etc/alternatives/jre_17_openjdk/bin/java -jar -Xmx2G -Xms2G BuildTools.jar
+mv spigot-*.jar /home/serveruser/minecraft-server/spigot.jar
 echo "eula=true" > eula.txt 
-java -jar -Xmx2G -Xms2G -XX:+UseZGC $HOME/minecraft-server/spigot.jar &
+/etc/alternatives/jre_17_openjdk/bin/java -jar -Xmx2G -Xms2G /home/serveruser/minecraft-server/spigot.jar &
 sleep 5
 JAVA_PID=$(jobs -p | tail -n 1)
 sleep 60
@@ -79,15 +77,11 @@ kill $JAVA_PID
 
 #Modify Spigot to work with BedrockConnect (uses default Bedrock 19132 port) and host on any
 echo "Modifying plugin files for public/LAN hosting also opening ports on firewalld (if installed)"
-sed -i '17 s/.*/  address: 0.0.0.0/' $HOME/minecraft-server/plugins/Geyser-Spigot/config.yml
-sed -i '49 s/.*/  address: 0.0.0.0/' $HOME/minecraft-server/plugins/Geyser-Spigot/config.yml
-sed -i '19 s/.*/  port: 19133/' $HOME/minecraft-server/plugins/Geyser-Spigot/config.yml
+sed -i '17 s/.*/  address: 0.0.0.0/' /home/serveruser/minecraft-server/plugins/Geyser-Spigot/config.yml
+sed -i '49 s/.*/  address: 0.0.0.0/' /home/serveruser/minecraft-server/plugins/Geyser-Spigot/config.yml
+sed -i '19 s/.*/  port: 19133/' /home/serveruser/minecraft-server/plugins/Geyser-Spigot/config.yml
 
 #Pull Start Script
-chmod +x $HOME/minecraft-server/spigot.jar
-chmod +x $HOME/minecraft-server/bedrock-connect.jar
-cd $HOME/minecraft-server
-wget https://github.com/Operator-One/easy-spigot/raw/main/start-spigot-mc.sh
-chmod +x $HOME/minecraft-server/start-spigot-mc.sh
-
-exit 0
+chmod +x /home/serveruser/minecraft-server/spigot.jar
+chmod +x /home/serveruser/minecraft-server/bedrock-connect.jar
+cd /home/serveruser/minecraft-server
